# rep-motivated-seller

./: .env.development  .env.development.template  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .github-copilot-validation.sh  .gitignore  .gitleaksignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .snyk  ADMIN_DASHBOARD.md  AI_CHAT_IMPLEMENTATION_GUIDE.md  AI_CHAT_QUICKSTART.md  AI_VOICE_ENHANCEMENTS_GUIDE.md  API_KEY_ROTATION_CHECKLIST.md  APPLY_CRITICAL_MIGRATIONS.sql  APPLY_SMS_MIGRATION.md  AUTH_FIX_VERIFICATION.md  BLOG_ENHANCEMENTS_COMPLETE.md  BLOG_ENHANCEMENTS_INSTALL.md  BUTTON_AUDIT.md  BUTTON_AUDIT_COMPLETE.md  BUTTON_FIXES_COMPLETE.md  BUTTON_FIXES_QUICK_REF.md  CALCULATOR_SUITE_COMPLETE.md  CALENDLY-INTEGRATION-COMPLETE.txt  CLAUDE.md  CLAUDE_SURVEY.md  CLOUDFLARE_CACHE_REDIRECT_FIX.md  CLOUDFLARE_PAGES_ANALYSIS.md  CLOUDFLARE_REDIRECT_FIX.md  CLOUDFLARE_SUCCESS_REPORT.md  COMPLETE_ENV_TEMPLATE.env  COMPLETE_MCP_IMPLEMENTATION_SUMMARY.md  COMPLETE_WINDOWS_SETUP.md  COMPLIANCE_IMPLEMENTATION_STATUS.md  CONTRIBUTING.md  (+217 more)
%USERPROFILE%/: .wslconfig
.claude/: settings.local.json
.cursor/: mcp.json
.github/: .gitignore  SECURITY.md
.mcp/: settings.json
ARCHIVED_20260108_163712/: MANIFEST.md
aws-lambda/: lambda_function.py  template.yaml
capcut-templates/: 6-CHAPTER_CONSISTENCY_REPORT.md  AMAZING_STATUS.txt  ASSET_CHECKLIST.md  ASSET_CREATION_WORKFLOW.md  BRAND_GUIDELINES.md  CANVA_GRAPHICS_GUIDE.md  CAPCUT_SETUP_GUIDE.md  CHAPTERS_1-3_PRODUCTION_GUIDE.md  CREATE_FIRST_VIDEO.md  CURRENT_STATUS.txt  DIRECTORY_CONSOLIDATION_KNOWLEDGE_BASE.md  FONT_SETUP_GUIDE.md  FULL_REVISION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ORGANIZE_EXISTING_ASSETS.md  PROGRESS_TRACKER.txt  QUICK_START_ASSET_CREATION.md  README.md  START_HERE.md  WORK_COMPLETED_SUMMARY.md  check-assets.bat
deals-and-dollars/: Deal+Analyzer+for+Flips.xlsx  underwriting Deal Analysis Software.xlsx
docker/: daemon.development.json  daemon.json
docs/: DAPPIER_AI_INTEGRATION_STATUS.md  ENVIRONMENT.md  EXECUTIVE_SUMMARY.md  EXTENSION_UPGRADE_PLAN.md  IMPLEMENTATION-CHECKLIST.md  INDEX.md  MCP_INTEGRATION_HOWTO.md  MIGRATION_README.md  MIGRATION_SCRIPTS.md  NETLIFY_TO_SUPABASE_MIGRATION_ANALYSIS.md  PAYMENT-INTEGRATION-MASTER-GUIDE.md  QUICK-REFERENCE.md  QUICK_REFERENCE.md  README-PAYMENT-INTEGRATION.md  SUPABASE_UPGRADE_HOWTO.md  UPGRADE_POSTGRES.md  calendly-zoom-integration-guide.md  paypal-integration-guide.md  r2-storage-analytics-review.md  stripe-integration-guide.md
etc/: wsl.conf
fsbo-listing/: load-env-mcp.js  server.js
functions/: health.ts
hardship letters/: Credit_Card_Hardship_Program_Letter.doc  Credit_Freeze_Letter_Of_Hardship.doc  Credit_Repair_Letter.doc  Credit_Repair_Pay_To_Delete_Letter.doc  Defer_Home_Equity_Loan_Payment.doc  Funeral_Cost_Hardship.doc  Hardship_Letter_Adjustable_Rate_Mortgage_Loan_Modification.doc  Hardship_Letter_Collection_Agency.doc  Hardship_Letter_Debt_Settlement.doc  Hardship_Letter_Keep_House.doc  Hardship_Letter_Laid_Off.doc  Hardship_Letter_Social_Security.doc  Hardship_Letter_Tax_Deferral.doc  Hardship_Letter_Wage_Garnishment.doc  Hardship_Temporary_Assistance_Loan_Cover_Letter.doc  House_Burned_Down_Hardship_Letter.doc  Installment_Plan_Hardship_Letter.doc  Late_Credit_Card_Payment_Hardship_Letter.doc  Late_Mortgage_Payment_Hardship_Letter.doc  Late_Payments_Affecting_Credit_Score.doc  Mortgage_Modification_Natural_Disaster_Hardship.doc  Property_Tax_Hardship_Letter.doc  Temporary_Housing_Assistance_Hardship_Letter.doc  financial_hardship_letter_for_medical_bills.doc  hardship_letter_for_deed_in_lieu_of_foreclosure.doc  hardship_letter_for_short_sale.doc  hardship_letter_stop_foreclosure.doc
mcp-server/: package.json
netlify-imports/: AdminDashboard.txt  AdminStats.txt  CallRecord.txt  Cash-Out Refinance Application Legal Guide.txt  DASHBOARD.txt  DOCTYPE html.txt  Fix-and-Flip Real Estate Contract Legal Guide.txt  ForeclosureResponse.txt  MEMBERSHIP TIERS.txt  PrivacyPolicyPage.txt  ProfilePage.txt  REVIEW , ANALYZE, COMPARE, UPDATE , OMIT AS NEEDED,  IF NEEDED.txt  TermsOfServicePage.txt  USER.txt  createCheckoutSession.txt  export const FinancingBanner.txt  export const Footer.txt  export const Header.txt  foreclosure crm setup.txt  interface CashoutRefiFormData.txt  interface ContractData.txt  interface DNSRecord.txt  interface FixFlipFormData.txt  interface FormData.txt  interface LoginFormProps.txt  interface NotificationSettings.txt  interface OwnershipInfo.txt  interface PricingCardProps.txt  interface SignupFormProps.txt  interface SubdomainRecord.txt  interface VerificationItem.txt  type ContractType = wholesale fix-flip cashout-refi.txt  types membership= PricingCard SubscriptionManager.txt
public/: _headers
readme-guides-setups/: COMPLETE VIDEO LEARNING SYSTEM IMPLEMENTATION.txt  CREDIT REPAIR SERVICE INTEGRATION.txt  Complete Legal Protection & Direct Mail System.txt  FORECLOSURE CRM SETUP.txt  GLBA IMPLEMENTATION ROADMAP.txt  HUBSPOT INTEGRATION.txt  MailerLite Integration Guide for RepMotivatedSeller.txt  R2 Storage Monitoring Dashboard for RepMotivatedSeller.txt  R2 Storage Monitoring Dashboard for RepMotivatedSellerTrack storage costs and lifecycle policy effectiveness.txt  SMS Opt-in Opt-out Implementation.txt  SYSTEM VERIFICATION & TESTING GUIDE.txt  complete subscription service implementation.txt  foreclosure  Email Survey Version Text-Based for Mail.txt  foreclosure Structured Call Script for CRM Tools.txt
repmotivatedsellershoprealestatespaceorg/: app.json  package-lock.json  package.json
scripts/: db-connection-test.ts  setup-supabase-redirects.ps1  test-auth.ps1  verify-security.ps1
src/: App.enhanced.tsx  App.tsx  app.tsx2  app.tsx3  index.css  main.enhanced.tsx  main.tsx  supabaseClient.tsx  test-youtube-config.ts  tracing.ts  vite-env.d.ts
src/windows/common/: CMakeLists.txt  config.cpp  relay.cpp  svccomm.cpp  wslclient.cpp  wslclient.h
supabase/: DATA_RETENTION_POLICY.sql  SECURITY_POLICY.md  config.staging.toml  config.toml  config.toml.broken.20251101093346  seed.sql.skip  (+1 more)
(+668 files in other folders)
